--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ body {
 }
 
 #contactb:hover{
-    background-color: #9b6060;
+    background-color: #bb7575;
 }
 
 .gwrap{
@@ -301,4 +301,5 @@ body {
     .footer a {
         align-self: center;
     }
+
 }
