--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,17 @@ body {
 
 
 @media screen and (min-width: 850px){
+
+.contactform input,
+.contactform textarea {
+  width: 100%;       
+  max-width: 500px; 
+  height: 45px; 
+  padding: 10px;
+  font-size: 1rem;
+  box-sizing: border-box; 
+}
+
     .navbar{
         display: flex;
         background-color: #f1bdbb;
@@ -320,3 +331,4 @@ body {
         justify-content: center;
     }
 }
+
