--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,14 @@ body {
   box-sizing: border-box; 
 }
 
+
+    #contactb {
+        width: 100%;
+        max-width: 500px;
+        padding: 12px 0;
+        box-sizing: border-box;
+    }
+
     .navbar{
         display: flex;
         background-color: #f1bdbb;
@@ -331,4 +339,5 @@ body {
         justify-content: center;
     }
 }
+
 
